scrollbar fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,10 +1,10 @@
 ::-webkit-scrollbar {
-    width: 2px;
+    width: 0px;
 }
 
 ::-webkit-scrollbar-thumb {
     background: rgba(0, 0, 0, 0);
-    border-right: 2px solid black;
+    border-right: 0px solid black;
 }
 
 ::-webkit-scrollbar-track {
